-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.12.4, 5.13.0
-
714c81d95e9a0bd91637a25fb20c54135c306442
To reproduce, run attached example which pops up another window which simply clears the screen with different colors. Once it shows, try closing it. It is automatically shown again, but this time the rendering has stopped.
| For Gerrit Dashboard: QTBUG-77263 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 276663,2 | Fix rendering when closing and re-opening a window | 5.13 | qt/qt3d | Status: MERGED | +2 | 0 |