Fix rendering when closing and re-opening a window

Scene3D stops rendering if a window is closed and then opened
again. That happens because eventfilter was removed at
SurfaceAboutToBeDestroyed. There is no need to remove the
event filter, as a destroyed window will not receive any
events in any case.

Task-number: QTBUG-77263
Change-Id: I1bcf3c572da6c06c09d1d9590bd8481b1fed6953
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>